# aiden

./: .dockerignore  .env.69.example  .env.eve.example  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.eve  Dockerfile.nginx  Makefile  README.md  docker-compose.yml  eve.character.json  eve.json  milli.character.json  nginx.conf  point69.character.json  pytest.ini  start.sh
.github/: deploy-eve-to-staging.yaml  (+1 more)
apps/api/: .dockerignore  .env.api.example  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.celery  Makefile  README.md  alembic.ini  conftest.py  dynamic_pub_key.pub  mypy.ini  pyproject.toml  server.py
apps/api/src/: .env.api.example  __init__.py  auth.py  aws_utils.py  celeryconfig.py  db.py  models.py  server.py  setup.py  tasks.py  test.character.json  test_endpoints.py  tests.py  token_deployment.py  utils.py  wallet.py
apps/api/src/alembic/: env.py
apps/api/src/alembic/versions/: 2c15509c5199_db_init.py  4ae322b296e4_.py  51f6b78dd87a_.py  85f4d9b486ae_add_dynamic_id_to_user_separate_wallet.py  b07e119f3895_.py  c884a620fdfa_add_abi_to_token_add_started_field_to_.py  cc2c27d22728_.py  f032c2e8f187_.py  fb4810e3c71f_make_eliza_agent_id_nullable.py
apps/api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/bonding_token/: README.md  hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml
apps/api/src/bonding_token/cache/: solidity-files-cache.json
apps/api/src/bonding_token/contracts/: BondingCurveToken.sol
apps/api/src/bonding_token/test/: BondingCurveTokenTest.js
apps/api/src/db/: __init__.py  crud.py  db.py  models.py  setup.py  test_db.py
apps/api/src/token/: bondingToken.sol  web3.py
apps/market-data/: .env.example  Dockerfile.market-data  README.md  alembic.ini  pyproject.toml
apps/market-data/src/: __init__.py  server.py
apps/market-data/src/alembic/: env.py
apps/market-data/src/alembic/versions/: 6d6fe1c9f059_add_address_field_to_token_symbol_table.py  b7e23ef12b4c_init_tokensymbol_and_tokentimeseries_.py  c860b562f523_add_has_intraday_for_minutes_data_.py
apps/market-data/src/db/: __init__.py  crud.py  models.py  setup.py
apps/market-data/src/routers/: crud.py  udf.py  utils.py
apps/runtime/: .env.example  Dockerfile.runtime  README.md  nginx.conf  pyproject.toml  start.sh
apps/runtime/src/: server.py
(+202 files in other folders)
