[project]
name = "runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "uvicorn==0.34",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "types-requests==2.32.0.20250301",
]
